git/postgresql/01-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: forgejo-pg
  namespace: forgejo
spec:
  serviceName: forgejo-pg-svc
  replicas: 1
  selector:
    matchLabels:
      app: forgejo-pg
  template:
    metadata:
      labels:
        app: forgejo-pg
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgres
          image: postgres:18.3
          ports:
            - name: postgres
              containerPort: 5432
          resources:
            requests:
              memory: "128Mi"
              cpu: "50m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "forgejo"]
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "forgejo"]
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 5
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: forgejo-pg-data
              mountPath: /var/lib/postgresql
              subPath: pgdata
      volumes:
        - name: forgejo-pg-data
          persistentVolumeClaim:
            claimName: forgejo-pg-pvc
