git/postgresql/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forgejo-pg-svc
  namespace: git
spec:
  type: ClusterIP
  selector:
    app: forgejo-pg
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
