git/postgresql/05-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: forgejo-pg-allow-app-clients
  namespace: git
spec:
  podSelector:
    matchLabels:
      app: forgejo-pg
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: forgejo
        - podSelector:
            matchLabels:
              app: forgejo-pg-backup
        - podSelector:
            matchLabels:
              app: forgejo-sso
      ports:
        - protocol: TCP
          port: 5432
